--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,11 @@
             <div class="img-flui d-flex col">
                 <button class="bi bi-dash-square fs-1 btn btn-primary menuHamb"></button>
             </div>
-            <div class="col-md  d-flex m-auto justify-content-around flex-row h-100">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            <div class="col-md collapse navbar-collaps  d-flex m-auto justify-content-around flex-row h-100" id="navbarNavAltMarkup">
+
                 <a class="nav-link fs-3 col-sm " href="#" type="button">
                    home1
                 </a><a class="nav-link fs-3  col-sm" href="#">
@@ -51,6 +55,16 @@
              <a href="#" class="nav-link w-100 justify-content-center d-flex">
                 <p class="nav-link text-white">opcion1 </p>
              </a>
+             <li class="d-flex dropdown w-100 justify-content-center">
+                <a class="nav-link  dropdown-toggle justify-content-center text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  opcion
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
         </nav>
         <article class="col-md-12 d-flex justify-content-end">
                  <div class="d-flex border m-2 col-10 p-2 ">
